# hero-hq

./: .prettierignore  .prettierrc  example_song.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: release.json
.github/workflows/: main.yml
src/: app.css  app.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  audio.rs  aws.rs  chorus.rs  compress.rs  hero.rs  logging.rs  main.rs
src/components/App/: App.css  App.tsx
src/components/Chorus/: Chorus.css  Chorus.tsx
src/components/Download/: Download.css  Download.tsx
src/components/Loading/: Loading.tsx  equalizer.json
src/components/Settings/: Settings.css  Settings.tsx
src/components/Song/: Song.css  Song.tsx
src/components/Upload/: Upload.css  Upload.tsx
src/constants/: rust.ts  views.ts
src/context/: index.ts
src/hooks/: useAsyncEffect.ts  useDebounce.ts
src/types/: index.ts
src/utils/: log.ts  songs.ts  store.ts
