[package]
name = "hero-hq"
version = "0.0.1"
description = "A Tauri App"
authors = ["andy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
display_json = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
rodio = "0.16.0"
rust-ini = "0.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.7"
tauri = { version = "1.1", features = ["dialog-open", "fs-all", "notification-all", "path-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev" }
tauri-plugin-window-state = "0.1"
tokio-stream = "0.1.11"
walkdir = "2"
zip = "0.6.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
